--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -16,12 +16,12 @@
   /* sticky footer fix end */
   margin-top: 3em;
   color: mix(#fff, $gray, 25%);
-  -webkit-animation: intro 0.3s both;
-          animation: intro 0.3s both;
-  -webkit-animation-delay: 0.45s;
-          animation-delay: 0.45s;
-  background-color: $lighter-gray;
-  border-top: 1px solid $light-gray;
+  -webkit-animation: intro 0.0s both;
+          animation: intro 0.0s both;
+  -webkit-animation-delay: 0.0s;
+          animation-delay: 0.0s;
+  background-color: #FFF;
+  border-top: false; 
 
   footer {
     @include clearfix;
@@ -54,8 +54,9 @@
 }
 
 .page__footer-copyright {
-  font-family: $global-font-family;
+  font-family: "Times New Roman" !important;
   font-size: $type-size-7;
+  text-align: center; /* Center-align the credits */
 }
 
 .page__footer-follow {
@@ -63,25 +64,29 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
+    Display: none;
   }
 
   li {
     display: inline-block;
     padding-top: 5px;
     padding-bottom: 5px;
-    font-family: $sans-serif-narrow;
+    font-family: "Roboto";
     font-size: $type-size-6;
     text-transform: uppercase;
+    Display: none;
   }
 
   li + li:before {
     content: "";
     padding-right: 5px;
+    Display: none;
   }
 
   a {
     padding-right: 10px;
     font-weight: bold;
+    Display: none;
   }
 
   .social-icons {
@@ -90,3 +95,4 @@
     }
   }
 }
+
