--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -5,7 +5,7 @@
 #main {
   @include container;
   @include clearfix;
-  margin-top: 2em;
+  margin-top: 3em;
   padding-left: 1em;
   padding-right: 1em;
   animation: intro 0.3s both;
@@ -13,14 +13,15 @@
 
   @include breakpoint($x-large) {
     max-width: $x-large;
+    
   }
 }
 
 .page {
   @include breakpoint($large) {
-    @include span(10 of 12 last);
-    @include prefix(0.5 of 12);
-    @include suffix(2 of 12);
+    @include span(9.5 of 12 last);
+    @include prefix(0.5 of 12); /*left margin */
+    @include suffix(0.7 of 12);   /*right margin */
   }
 
   .page__inner-wrap {
@@ -49,7 +50,8 @@
 }
 
 .page__content {
-
+  text-align: justify;
+  
   h2 {
     padding-bottom: 0.5em;
     border-bottom: 1px solid $border-color;
@@ -385,7 +387,7 @@
   float: left;
 
   @include breakpoint($large) {
-    @include pre(2.5 of 12);
+    @include pre(8 of 12);
   }
 
   a {
